# geonode-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  cli.py  examples.py  main.py  pyproject.toml  requirements.txt  test_env_config.py  test_server.py
.github/: copilot-instructions.md
mcp_geonode/: __init__.py  server.py
